--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -837,9 +837,9 @@ html:lang(fr) .cnjnctn-or:before {
                   <p class="wb-fieldflow-label">You are: </p>
                 </div>
                 <ul>
-                  <li>A Canadian citizen or permanent resident
+                  <li>A citizen or permanent resident of Canada
                     <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
-                      <p>Do you own the residential property as a trustee  of a mutual fund trust, real estate investment trust, or specified investment  flow-through trust (SIFT) for Canadian income tax purposes?</p>
+                      <p>Do you own the residential property as a trustee of a mutual fund trust, real estate investment trust, or specified investment flow-through (SIFT) trust for Canadian income tax purposes?</p>
                       <ul>
                         <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>Yes</li>
                         <li>No
@@ -865,10 +865,10 @@ html:lang(fr) .cnjnctn-or:before {
                       </ul>
                     </div>
                   </li>
-                  <li data-wb-fieldflow='{"action": "append", "source": "#affected-owner"}'>A non-resident or temporary resident (individual)</li>
+                  <li data-wb-fieldflow='{"action": "append", "source": "#affected-owner"}'>A foreign national or temporary resident of Canada</li>
                   <li>A corporation
                     <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
-                      <p>Were you incorporated inside of Canada?</p>
+                      <p>Is your corporation incorporated in Canada?</p>
                       <ul>
                         <li>Yes
                           <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
@@ -896,7 +896,7 @@ html:lang(fr) .cnjnctn-or:before {
                   </li>
                   <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>A registered charity for Canadian income tax purposes</li>
                   <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>An Indigenous governing body or a corporation  wholly owned by an Indigenous governing body</li>
-                  <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>A cooperative housing corporation for Canadian  GST/HST purposes</li>
+                  <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>A cooperative housing corporation, hospital authority, municipality, para-municipal organization, public college, school authority, or university for Canadian  GST/HST purposes</li>
                   <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>Unsure (none of the above)</li>
                 </ul>
               </div>
@@ -935,7 +935,7 @@ html:lang(fr) .cnjnctn-or:before {
                 <p>You <strong>must file</strong> an Underused Housing Tax return for the calendar year, <strong>even if</strong> you qualify for an exemption.</p>
                
 	      </div>
-              <p class="wb-fieldflow-label">As an owner, are you one of the following:</p>
+              <p class="wb-fieldflow-label">As an affected owner of the residential property, are you one of the following:</p>
               <div data-ajax-replace="#exp-1" class="gc-font-2019 mrgn-bttm-md"></div>
             </div>
             <ul>
@@ -944,7 +944,7 @@ html:lang(fr) .cnjnctn-or:before {
                 <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
                   <div class="wb-fieldflow-header">
                     <div class="gc-font-2019">
-                      <p class="wb-fieldflow-label">Is your property one of the following: </p>
+                      <p class="wb-fieldflow-label">Is the residential property one of the following: </p>
                       <div data-ajax-replace="#exp-2" class="gc-font-2019 mrgn-bttm-md"></div>
                     </div>
                   </div>
@@ -954,7 +954,7 @@ html:lang(fr) .cnjnctn-or:before {
                       <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
                         <div class="wb-fieldflow-header">
                           <div class="gc-font-2019">
-                            <p class="wb-fieldflow-label">Based on its location, is your property:</p>
+                            <p class="wb-fieldflow-label">Based on its location, is the residential property:</p>
                             <div data-ajax-replace="#exp-3" class="gc-font-2019 mrgn-bttm-md"></div>
                           </div>
                         </div>
@@ -964,7 +964,7 @@ html:lang(fr) .cnjnctn-or:before {
                             <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
                               <div class="wb-fieldflow-header">
                                 <div class="gc-font-2019">
-                                  <p class="wb-fieldflow-label">Is the property:</p>
+                                  <p class="wb-fieldflow-label">Is the residential property:</p>
                                   <div data-ajax-replace="#exp-4" class="gc-font-2019 mrgn-bttm-md"></div>
                                 </div>
                               </div>
@@ -1091,8 +1091,7 @@ html:lang(fr) .cnjnctn-or:before {
 <summary id="primary-res">Primary place of residence</summary>
 	<div id="primary-res-content">
 		<p>Only affected owners who are <strong>individuals</strong> qualify for this exemption.</p>
-		    <p>A primary place of residence is a dwelling unit that is part of the residential property, occupied by you or your spouse or common-law partner, or by your child, or your spouse's or common-law partner's child, who is attending a designated learning institution.</p>
-<p>If you have more than one place of residence, your primary place of residence is the one that is first in order of importance to you.</p>
+		    <p>A dwelling unit that is part of the residential property, occupied by you or your spouse or common-law partner, or by your child, or your spouse's or common-law partner's child, who is attending a designated learning institution.</p>
 <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423684" target="_blank">Primary place of residence</a></p>
 	<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423683 target="_blank"">Exemption for residential properties that are used as a primary place of residence</a></p>
 	</details>
@@ -1102,8 +1101,9 @@ html:lang(fr) .cnjnctn-or:before {
 	<details>
 	<summary id="qual-occ">Qualifying occupancy</summary>	
 <div id="qual-occ-content">
-		    <p>Qualifying occupancy applies to situations where your ownership of a residential property <strong>has one or more</strong> qualifying occupancy periods totalling at least <strong>180 days</strong> in the calendar year. </p>
-		    <p>A qualifying occupancy period is at least one month in a calendar year where certain individuals (qualifying occupants) have continuous occupancy. </p>
+	<p>A dwelling unit that is part of the residential property, occupied by certain individuals (qualifying occupants), for <strong>one or more</strong> qualifying occupancy periods totalling at least <strong>180 days</strong> in the calendar year. </p>
+		  
+		    <p>A qualifying occupancy period is at least one month in a calendar year where qualifying occupants have continuous occupancy. </p>
 	<p>Qualifying occupancy periods can be <strong>28 days or longer</strong>.</p>
 
 
