--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -814,7 +814,7 @@ html:lang(fr) .cnjnctn-or:before {
     <p>If you are not an affected owner, you are an <strong>excluded owner</strong>. Excluded owners do not have to file a return or pay the tax. </p>
   
 	  
-	  <h2>Determine if you are an affected owner or an excluded owner</h2>
+	  <h2 id="determine">Determine if you are an affected owner or an excluded owner</h2>
     <p>Find out which type of owner you are based on your situation, and if you may qualify for an exemption from paying the tax.</p>
 	  
     <div class="wb-tabs mrgn-tp-lg">
