--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -797,7 +797,7 @@ margin-left: 38px;
 		
 	  
 		  <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax (UHT) return for the calendar year.</p>
-		<a href="https://test.canada.ca/cra-arc/subway/uht/who-file.html#determine">Determine if you are an affected owner</a>
+		<p>a href="https://test.canada.ca/cra-arc/subway/uht/who-file.html#determine">Determine if you are an affected owner</a></p>
 		<br> 
 		 <p>If you own more than one residential property in Canada, you must file a separate return for <strong>each property</strong>. If you are one of several affected owners of a residential property, <strong>each of you</strong> must file a separate return for the property.</p>
 		 <p>You <strong>must still file</strong> a return even if your ownership of the property qualifies for an exemption and you do not owe any tax.</p>
