--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1029,7 +1029,7 @@ html:lang(fr) .cnjnctn-or:before {
                 <p>An <strong>affected owner</strong> includes, but is not limited to, the following owners of a residential property in Canada:</p>
                 <ul>
                   <li>An individual who is <strong>not</strong> a Canadian citizen or permanent resident</li>
-                  <li>An individual who is a Canadian citizen or permanent resident, and who owns a residential property  in Canada as a trustee of a trust (other than as a personal representative of a deceased individual)</li>
+                  <li>An individual who is a Canadian citizen or permanent resident, and who owns a residential property  in Canada as a trustee of a trust (other than as a personal representative of a deceased individual, and as a trustee of a mutual fund trust, real estate investment trust, or SIFT trust for Canadian income tax purposes)</li>
                   <li>An individual who is a Canadian citizen or permanent resident, and who owns a residential property as a partner of a partnership</li>
                   <li>A corporation that is incorporated outside of Canada</li>
                   <li>A Canadian corporation whose shares are not listed on a Canadian stock exchange designated for Canadian income tax purposes</li>
