--- a/subway/uht/pay-tax.html
+++ b/subway/uht/pay-tax.html
@@ -866,7 +866,7 @@ margin-left: 38px;
 <h3>By cheque</h3>
 
 <p>Cheques can be made out to the <strong>Receiver General for Canada</strong>.</p>
-		 <p>Include the following information:</p>
+		 <p>Indicate the following information on your cheque:</p>
 		 <ul>
 			 <li>If you are an <strong>individual</strong>:</li>
 		<ul><li>Your tax identifier number (SIN, ITN, or TTN)</li></ul>
