--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -854,7 +854,7 @@ html:lang(fr) .cnjnctn-or:before {
                       </ul>
                     </div>
                   </li>
-                  <li data-wb-fieldflow='{"action": "append", "source": "#affected-owner-corp"}'>A foreign national or temporary resident of Canada</li>
+                  <li data-wb-fieldflow='{"action": "append", "source": "#affected-owner"}'>A foreign national or temporary resident of Canada</li>
                   <li>A corporation
                     <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
                       <p>Is your corporation incorporated in Canada?</p>
