--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1167,7 +1167,7 @@ html:lang(fr) .cnjnctn-or:before {
                     </ul>
                     <details>
                       <summary class="mrgn-tp-md">Example of qualifying occupancy</summary>
-                      <p>You are a foreign national of Canada who owns a residential property. </p>
+                      <p>You are a foreign national who owns a residential property. </p>
                       <p>In 2023, your spouse, a Canadian citizen, lived at the property from:</p>
                       <ul>
                         <li>March 1 - April 14</li>
