--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -795,11 +795,11 @@ html:lang(fr) .cnjnctn-or:before {
             <p>You <strong>must</strong> use your SIN to file your return.</p>
             <p>If you do not already have a SIN, you must apply for one.</p>
             <p><a href="https://www.canada.ca/en/employment-social-development/services/sin/apply.html" target="_blank">Apply for a SIN</a></p>
-            <h4>Non-residents or temporary residents to Canada</h4>
+            <h4>Foreign nationals or temporary residents of Canada</h4>
             <p>If you already have a SIN, you must use it to file your return.</p>
             <p>If you <strong>do not</strong> have a SIN, you <strong>must</strong> use your ITN or TTN to file your return.</p>
             <details>
-              <summary>Non-residents (use an ITN)</summary>
+              <summary>Foreign nationals (use an ITN)</summary>
               <p>If you do not have an ITN, you must apply for one.</p>
               <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents-tax/in-outside-canada/apply-individual-tax-number.html#how" target="_blank">Apply for an ITN</a></p>
               <p>If you do not have a valid ITN, and are concerned with meeting the filing deadline, you may be able to apply for one by completing the application form (Form T1261) and mailing it with your paper return.</p>
