--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1145,7 +1145,7 @@ html:lang(fr) .cnjnctn-or:before {
                   <summary id="primary-res">Primary place of residence</summary>
                   <div id="primary-res-content">
                     <p>Only affected owners who are <strong>individuals</strong> qualify for this exemption.</p>
-                    <p>A dwelling unit that is part of the residential property, occupied by you or your spouse or common-law partner, or by your child, or your spouse's or common-law partner's child, who is attending a designated learning institution.</p>
+                    <p>A dwelling unit that is part of the residential property, occupied primarily by the owner, their spouse or common-law partner, or by their child who is attending a designated learning institution.</p>
                     <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423684" target="_blank">Primary place of residence</a></p>
                     <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423683" target="_blank">Exemption for residential properties that are used as a primary place of residence</a></p>
                   </div>
@@ -1155,7 +1155,7 @@ html:lang(fr) .cnjnctn-or:before {
                 <details>
                   <summary id="qual-occ">Qualifying occupancy</summary>
                   <div id="qual-occ-content">
-                    <p>A dwelling unit that is part of the residential property, occupied by certain individuals (qualifying occupants), for <strong>one or more</strong> qualifying occupancy periods totalling at least <strong>180 days</strong> in the calendar year. </p>
+                    <p>A dwelling unit that is part of the residential property, occupied by a certain individual(s) (qualifying occupant(s)), for <strong>one or more</strong> qualifying occupancy periods totalling at least <strong>180 days</strong> in the calendar year. </p>
                     <p>A qualifying occupancy period is at least one month in a calendar year where qualifying occupants have continuous occupancy. </p>
                     <p>Qualifying occupancy periods can be <strong>28 days or longer</strong>.</p>
                     <p>A qualifying occupant is:</p>
@@ -1209,9 +1209,10 @@ html:lang(fr) .cnjnctn-or:before {
               <ul>
                 <li>A vacation property located in an eligible area of Canada and used by you or your spouse or common-law partner for at least 28 days in the calendar year</li>
               </ul>
-              <p class="mrgn-tp-lg"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn5/exemption-vacation-properties.html#_Toc122423683" target="_blank">Exemption for vacation properties </a></p>
-              <p><span class="fas fa-search-location fa-lg pull-left mrgn-rght-sm"></span>Refer to the <a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrUhtExpnTl?request_locale=en_CA" target="_blank">Underused housing tax vacation property designation tool</a> to determine if your residential property is located in an eligible area of Canada for the purposes of this exemption.</p>
-            </div>
+               <p><span class="fas fa-search-location fa-lg pull-left mrgn-rght-sm"></span>Refer to the <a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrUhtExpnTl?request_locale=en_CA" target="_blank">Underused housing tax vacation property designation tool</a> to determine if your residential property is located in an eligible area of Canada for the purposes of this exemption.</p>
+             <p class="mrgn-tp-lg"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn5/exemption-vacation-properties.html#_Toc122423683" target="_blank">Exemption for vacation properties </a></p>
+        
+	    </div>
           </details>
         </details>
         <p class="mrgn-tp-md">If you are uncertain about your obligations and liabilities under the Underused Housing Tax Act, you may contact us or request a ruling or interpretation about how the tax applies to your specific situation.</p>
