--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -854,9 +854,35 @@ html:lang(fr) .cnjnctn-or:before {
                       </ul>
                     </div>
                   </li>
-                  <li data-wb-fieldflow='{"action": "append", "source": "#affected-owner"}'>A foreign national or temporary resident of Canada</li>
+                  <li>A foreign national or temporary resident of Canada
+		   <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
+                      <p>Do you own the residential property as a trustee of a mutual fund trust, real estate investment trust, or specified investment flow-through (SIFT) trust for Canadian income tax purposes?</p>
+                      <ul>
+                        <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>Yes</li>
+                        <li data-wb-fieldflow='{"action": "removeClass", "source": "#affected-owner", "class": "hidden", "live": true}'>No</li>
+                        <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>Unsure (none of the above)</li>
+                      </ul>
+                    </div> </li>
                   <li>A corporation
-                    <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
+<div class="wb-fieldflow-sub"  data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
+<div class="wb-fieldflow-header">	
+<p class="wb-fieldflow-label">Is your corporation any of the following:</p>
+<div><ul>
+  <li>a registered charity for Canadian income tax purposes</li>
+  <li>a cooperative housing corporation, hospital authority, municipality,&nbsp;para-municipal organization,&nbsp;public college, school authority, or university&nbsp;for Canadian GST/HST purposes</li>
+  <li>a corporation wholly owned by an Indigenous governing body</li>
+</ul>
+</div>
+</div>
+  <ul>
+                        <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>Yes</li>
+                        <li>No
+			<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
+                      <p>Do you own the residential property as a trustee of a mutual fund trust, real estate investment trust, or specified investment flow-through (SIFT) trust for Canadian income tax purposes?</p>
+                      <ul>
+                        <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>Yes</li>
+                        <li>No
+			 <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
                       <p>Is your corporation incorporated in Canada?</p>
                       <ul>
                         <li>Yes
@@ -882,6 +908,18 @@ html:lang(fr) .cnjnctn-or:before {
                         <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>Unsure (none of the above)</li>
                       </ul>
                     </div>
+			</li>
+                        <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>Unsure (none of the above)</li>
+                      </ul>
+                    </div>
+			
+			
+			</li>
+                        <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>Unsure (none of the above)</li>
+                      </ul>	
+</div>
+			  
+                   
                   </li>
                   <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>A registered charity for Canadian income tax purposes</li>
                   <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>An Indigenous governing body or a corporation  wholly owned by an Indigenous governing body</li>
