--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -878,7 +878,7 @@ html:lang(fr) .cnjnctn-or:before {
                         <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>Yes</li>
                         <li>No
 			<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
-                      <p>Do you own the residential property as a trustee of a mutual fund trust, real estate investment trust, or specified investment flow-through (SIFT) trust for Canadian income tax purposes?</p>
+                      <p>Does your corporation own the residential property as a trustee of a mutual fund trust, real estate investment trust, or specified investment flow-through (SIFT) trust for Canadian income tax purposes?</p>
                       <ul>
                         <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>Yes</li>
                         <li>No
