--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -868,9 +868,9 @@ html:lang(fr) .cnjnctn-or:before {
 <div class="wb-fieldflow-header">	
 <p class="wb-fieldflow-label">Is your corporation any of the following:</p>
 <div><ul>
-  <li>a registered charity for Canadian income tax purposes</li>
-  <li>a cooperative housing corporation, hospital authority, municipality,&nbsp;para-municipal organization,&nbsp;public college, school authority, or university&nbsp;for Canadian GST/HST purposes</li>
-  <li>a corporation wholly owned by an Indigenous governing body</li>
+  <li>A registered charity for Canadian income tax purposes</li>
+  <li>A cooperative housing corporation, hospital authority, municipality,&nbsp;para-municipal organization,&nbsp;public college, school authority, or university&nbsp;for Canadian GST/HST purposes</li>
+  <li>A corporation wholly owned by an Indigenous governing body</li>
 </ul>
 </div>
 </div>
