--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -859,7 +859,7 @@ html:lang(fr) .cnjnctn-or:before {
                       <p>Do you own the residential property as a trustee of a mutual fund trust, real estate investment trust, or specified investment flow-through (SIFT) trust for Canadian income tax purposes?</p>
                       <ul>
                         <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>Yes</li>
-                        <li data-wb-fieldflow='{"action": "removeClass", "source": "#affected-owner", "class": "hidden", "live": true}'>No</li>
+                        <li data-wb-fieldflow='{"action": "append", "source": "#affected-owner"}'>No</li>
                         <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>Unsure (none of the above)</li>
                       </ul>
                     </div> </li>
