--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1069,15 +1069,16 @@ html:lang(fr) .cnjnctn-or:before {
               <div class="hidden" id="ex1">
                 <p class="pull-left">Read more:</p>
                 <ul class="pull-left mrgn-lft-md list-unstyled small">
-                  <li><a href="">Link 1</a></li>
+                  <li><a href="">Exemptions for specified Canadian partnerships, trusts and corporations</a></li>
                   <li><a href="">Link 2</a></li>
+			<li><a href="">Link 3</a></li>
                 </ul>
                 <div class="clearfix">&nbsp;</div>
               </div>
               <div class="hidden" id="ex2">
                 <p class="pull-left">Read more:</p>
                 <ul class="pull-left mrgn-lft-md list-unstyled small">
-                  <li><a href="">Link 1</a></li>
+                  <li><a href="">Primary place of residence</a></li>
                   <li><a href="">Link 2</a></li>
                 </ul>
                 <div class="clearfix">&nbsp;</div>
@@ -1092,8 +1093,9 @@ html:lang(fr) .cnjnctn-or:before {
               <div class="hidden" id="ex4">
                 <p class="pull-left">Read more:</p>
                 <ul class="pull-left mrgn-lft-md list-unstyled small">
-                  <li><a href="">Link 1</a></li>
+                  <li><a href="">Exemption for new residential properties</a></li>
                   <li><a href="">Link 2</a></li>
+			    <li><a href="">Link 2</a></li>
                 </ul>
                 <div class="clearfix">&nbsp;</div>
               </div>
