--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1069,17 +1069,18 @@ html:lang(fr) .cnjnctn-or:before {
               <div class="hidden" id="ex1">
                 <p class="pull-left">Read more:</p>
                 <ul class="pull-left mrgn-lft-md list-unstyled small">
-                  <li><a href="">Exemptions for specified Canadian partnerships, trusts and corporations</a></li>
-                  <li><a href="">Link 2</a></li>
-			<li><a href="">Link 3</a></li>
+                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn4/exemptions-specified-canadian-partnerships-trusts-corporations.html#_Toc122681245" target="_blank">Exemptions for specified Canadian partnerships, trusts and corporations</a></li>
+                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn11/exemption-new-owners.html#_Toc122423683" target="_blank">Exemption for new owners</a></li>
+			<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn12/exemptions-deceased-individuals-personal-representatives-co-owners.html" target="_blank">Exemptions for deceased individuals and their personal representatives or co-owners</a></li>
                 </ul>
                 <div class="clearfix">&nbsp;</div>
               </div>
               <div class="hidden" id="ex2">
                 <p class="pull-left">Read more:</p>
                 <ul class="pull-left mrgn-lft-md list-unstyled small">
-                  <li><a href="">Primary place of residence</a></li>
-                  <li><a href="">Link 2</a></li>
+                  <li><a href="">Exemption for new residential properties</a></li>
+                  <li><a href="">Exemptions for residential properties that cannot be used year-round</a></li>
+			  <li><a href="">Exemptions for uninhabitable residential properties</a></li>
                 </ul>
                 <div class="clearfix">&nbsp;</div>
               </div>
