exemptions in answers

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1078,25 +1078,26 @@ html:lang(fr) .cnjnctn-or:before {
               <div class="hidden" id="ex2">
                 <p class="pull-left">Read more:</p>
                 <ul class="pull-left mrgn-lft-md list-unstyled small">
-                  <li><a href="">Exemption for new residential properties</a></li>
-                  <li><a href="">Exemptions for residential properties that cannot be used year-round</a></li>
-			  <li><a href="">Exemptions for uninhabitable residential properties</a></li>
+                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn13/exemptions-new-residential-properties.html#_Toc125631183" target="_blank">Exemption for new residential properties</a></li>
+                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn9/exemptions-residential-properties-cannot-used-year-round.html" target="_blank">Exemptions for residential properties that cannot be used year-round</a></li>
+			  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn10/exemptions-uninhabitable-residential-properties.html" target="_blank">Exemptions for uninhabitable residential properties</a></li>
                 </ul>
                 <div class="clearfix">&nbsp;</div>
               </div>
               <div class="hidden" id="ex3">
                 <p class="pull-left">Read more:</p>
                 <ul class="pull-left mrgn-lft-md list-unstyled small">
-                  <li><a href="">Exemption for vacation properties</a></li>
+                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn5/exemption-vacation-properties.html#_Toc122423683" target="_blank">Exemption for vacation properties</a></li>
                 </ul>
                 <div class="clearfix">&nbsp;</div>
               </div>
               <div class="hidden" id="ex4">
                 <p class="pull-left">Read more:</p>
                 <ul class="pull-left mrgn-lft-md list-unstyled small">
-                  <li><a href="">Exemption for new residential properties</a></li>
-                  <li><a href="">Link 2</a></li>
-			    <li><a href="">Link 2</a></li>
+                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423683" target="_blank">Exemption for residential properties that are used as a primary place of residence</a></li>
+                 
+                  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423683" target="_blank">Exemption for residential properties that are used for qualifying occupancy</a></li>
+			  
                 </ul>
                 <div class="clearfix">&nbsp;</div>
               </div>
