--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -868,7 +868,7 @@ html:lang(fr) .cnjnctn-or:before {
 <div class="wb-fieldflow-header">	
 <p class="wb-fieldflow-label">Is your corporation any of the following:</p>
 <div><ul>
-  <li<p>A registered charity for Canadian income tax purposes</p></li>
+  <li><p>A registered charity for Canadian income tax purposes</p></li>
   <li><p>A cooperative housing corporation, hospital authority, municipality,&nbsp;para-municipal organization,&nbsp;public college, school authority, or university&nbsp;for Canadian GST/HST purposes</p></li>
   <li><p>A corporation wholly owned by an Indigenous governing body</p></li>
 </ul>
