--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -981,7 +981,7 @@ html:lang(fr) .cnjnctn-or:before {
                   <ul>
                     <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-yes, #ex4", "class": "hidden", "live": true}'>Yes</li>
                     <li>No
-                      <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #, #ex4", "class": "hidden", "live": true}}'>
+                      <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4", "class": "hidden", "live": true}}'>
                         <div class="wb-fieldflow-header">
                           <div class="gc-font-2019">
                             <p class="wb-fieldflow-label">Is the residential property one of the following: </p>
@@ -991,7 +991,7 @@ html:lang(fr) .cnjnctn-or:before {
                         <ul>
                           <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-yes, #ex2", "class": "hidden", "live": true}'>Yes</li>
                           <li>No
-                            <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #, #ex4", "class": "hidden", "live": true}}'>
+                            <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4", "class": "hidden", "live": true}}'>
                               <div class="wb-fieldflow-header">
                                 <div class="gc-font-2019">
                                   <p class="wb-fieldflow-label">Based on its location, is the residential property:</p>
@@ -999,7 +999,7 @@ html:lang(fr) .cnjnctn-or:before {
                                 </div>
                               </div>
                               <ul>
-                                <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-yes, #", "class": "hidden", "live": true}'>Yes</li>
+                                <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-yes, #ex3", "class": "hidden", "live": true}'>Yes</li>
                                 <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-no", "class": "hidden", "live": true}'>No </li>
                               </ul>
                             </div>
@@ -1012,7 +1012,7 @@ html:lang(fr) .cnjnctn-or:before {
               </li>
             </ul>
           </div>
-          <div id="affected-owner-corp" class="wb-fieldflow-sub hidden gc-font-2019" data-wb-fieldflow='{"renderas": "radio", "noForm": true, "gcChckbxrdio":true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #, #ex4", "class": "hidden", "live": true}}'>
+          <div id="affected-owner-corp" class="wb-fieldflow-sub hidden gc-font-2019" data-wb-fieldflow='{"renderas": "radio", "noForm": true, "gcChckbxrdio":true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4", "class": "hidden", "live": true}}'>
             <div class="wb-fieldflow-header">
               <div class="gc-font-2019">
                 <div class="alert alert-info">
@@ -1032,7 +1032,7 @@ html:lang(fr) .cnjnctn-or:before {
             <ul>
               <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-yes, #ex1", "class": "hidden", "live": true}'>Yes</li>
               <li>No
-                <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #, #ex4", "class": "hidden", "live": true}}'>
+                <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4", "class": "hidden", "live": true}}'>
                   <div class="wb-fieldflow-header">
                     <div class="gc-font-2019">
                       <p class="wb-fieldflow-label">Is the residential property:</p>
@@ -1043,7 +1043,7 @@ html:lang(fr) .cnjnctn-or:before {
                   <ul>
                     <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-yes, #ex4", "class": "hidden", "live": true}'>Yes</li>
                     <li>No
-                      <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #, #ex4", "class": "hidden", "live": true}}'>
+                      <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4", "class": "hidden", "live": true}}'>
                         <div class="wb-fieldflow-header">
                           <div class="gc-font-2019">
                             <p class="wb-fieldflow-label">Is the residential property one of the following: </p>
